@@ -1,3 +1,8 @@
+2012-06-20 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c:
+	  Fix for destructive ifx-testing and.
+
 2012-06-19 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/peeph-z80.def,
